--- a/composer.json
+++ b/composer.json
@@ -20,20 +20,34 @@
         "yiisoft/yii2-swiftmailer": "*"
     },
     "require-dev": {
+
+        "bower-asset/admin-lte": "~2.0",
+        "bower-asset/font-awesome": "~4.0",
+        "bower-asset/fancybox": "*",
+        "bower-asset/jquery-slimscroll": "^1.3",
+
         "yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*",
         "yiisoft/yii2-authclient": "~2.0",
         "yiisoft/yii2-jui": "~2.0",
-        "vlucas/phpdotenv": "~1.0",
-        "bower-asset/admin-lte": "~2.0",
-        "bower-asset/font-awesome": "~4.0",
-        "bower-asset/fancybox": "*",
-        "bower-asset/jquery-slimscroll": "^1.3",
+
         "dragonjet/yii2-opengraph": "dev-master",
+
         "2amigos/yii2-translateable-behavior" : "*",
-        "trntv/yii2-aceeditor": "~2.0"
+
+        "trntv/yii2-aceeditor": "~2.0",
+
+        "vlucas/phpdotenv": "~1.0",
+
+        "cebe/yii2-gravatar": "*",
+
+        "nizsheanez/yii2-asset-converter": "1.*",
+
+        "rmrevin/yii2-minify-view": "~1.9",
+
+        "kartik-v/yii2-tree-manager": "@dev"
     },
     "config": {
         "process-timeout": 1800
