--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "OakCMS/oakcms",
+    "name": "oakcms/oakcms",
     "description": "OakCMS Yii 2 sample cms",
     "keywords": ["yii2", "framework", "OakCMS", "cms"],
     "homepage": "http://codice.in.ua/",
