--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,8 @@ trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.{less,sass,scss}]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
