--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,8 @@
         "yiisoft/yii2-swiftmailer": "*"
     },
     "require-dev": {
-
         "bower-asset/admin-lte": "~2.0",
-        "bower-asset/font-awesome": "~4.0",
+        "bower-asset/font-awesome": "4.*",
         "bower-asset/fancybox": "*",
         "bower-asset/jquery-slimscroll": "^1.3",
 
@@ -47,7 +46,9 @@
 
         "rmrevin/yii2-minify-view": "~1.9",
 
-        "kartik-v/yii2-tree-manager": "@dev"
+        "kartik-v/yii2-tree-manager": "@dev",
+
+        "sonata-project/google-authenticator": "*"
     },
     "config": {
         "process-timeout": 1800
