--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,12 @@
 <IfModule mod_rewrite.c>
     Options +FollowSymlinks
-    IndexIgnore */*
     RewriteEngine On
 
-    RewriteCond %{REQUEST_URI} !^/(web)
-    RewriteRule (.*) /web/$1 [L]
+    RewriteCond %{REQUEST_URI} ^/.*
+    RewriteRule ^(.*)$ web/$1 [L]
 
-    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_URI} !^/web/
+    RewriteCond %{REQUEST_FILENAME} !-f [OR]
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /web/index.php
+    RewriteRule ^.*$ web/index.php
 </IfModule>
