--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ YII_ENV                                 = dev
 
 # Databases
 DB_HOST                                 = localhost
-DB_NAME                                 = oakcms
-DB_USERNAME                             = root
-DB_PASSWORD                             =
+DB_NAME                                 = c016
+DB_USERNAME                             = c0Guru
+DB_PASSWORD                             = Babybu
 DB_TABLE_PREFIX                         =
 DB_CHARSET                              = utf8
 
