--- a/.env-dist
+++ b/.env-dist
@@ -4,14 +4,14 @@ YII_ENV                                 = dev
 
 # Databases
 DB_HOST                                 = localhost
-DB_NAME                                 = db_name
+DB_NAME                                 = oakcms
 DB_USERNAME                             = root
-DB_PASSWORD                             =
+DB_PASSWORD                             = 23456789
 DB_TABLE_PREFIX                         =
 DB_CHARSET                              = utf8
 
 # Other
-COOKIE_VALIDATION_KEY                   = Ld?UFIq9|J?y34{}NtbIe?c3wKRPYbkw1*J0f@~}
+COOKIE_VALIDATION_KEY                   = sWolLhiuOjtjjvwC3VnLcM8e9b2r3nfz
 BASE_URL                                =
 
 # Emails
