--- a/.env-dist
+++ b/.env-dist
@@ -7,7 +7,7 @@ DB_HOST                                 = localhost
 DB_NAME                                 = oakcms
 DB_USERNAME                             = root
 DB_PASSWORD                             = 23456789
-DB_TABLE_PREFIX                         =
+DB_TABLE_PREFIX                         = oak
 DB_CHARSET                              = utf8
 
 # Other
