--- a/composer.json
+++ b/composer.json
@@ -112,10 +112,6 @@
         ]
     },
     "extra": {
-        "asset-installer-paths": {
-            "npm-asset-library": "vendor/npm",
-            "bower-asset-library": "vendor/bower"
-        },
         "yii\\composer\\Installer::postCreateProject": {
             "setPermission": [
                 {
@@ -125,5 +121,11 @@
                 }
             ]
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ]
 }
