add port to config

--- a/.env-dist
+++ b/.env-dist
@@ -4,6 +4,7 @@ YII_ENV                                 = dev
 
 # Databases
 DB_HOST                                 = localhost
+DB_PORT                                 = 3306
 DB_NAME                                 = oakcms
 DB_USERNAME                             = root
 DB_PASSWORD                             = 23456789
